--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -22,7 +22,7 @@
   width: 100%;
   height: 45px;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 999;
   margin: 0;
   padding-top: 15px;
@@ -194,6 +194,12 @@ footer {
   border-radius: 5px;
 }
 
+@media screen and (max-width: 720px) {
+  .hidden-mobile {
+    display: none;
+    visibility: hidden;
+  }
+}
 
 /* Helpers */
 
